添加icon和iconPosition属性

--- a/ddui/public/index.html
+++ b/ddui/public/index.html
@@ -23,6 +23,13 @@
 		body{
 			font-size: var(--font-size);
 		}
+		.icon {
+		       width: 1em; height: 1em;
+		       vertical-align: -0.15em;
+		       fill: currentColor;
+		       overflow: hidden;
+		    }
 	</style>
+	<script src="//at.alicdn.com/t/font_3224697_ynxj6v9sx3.js"></script>
   </body>
 </html>
