--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
 			<d-input value="王五" readonly></d-input>
 		</div>
 		<div class="box">
+			<d-input value="王" @change='inputChange'></d-input>
+		</div>
+		<div class="box">
 			<d-input value="王" error="姓名不能少于两个字"></d-input>
 		</div>
 		<div class="box">
