--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,27 @@
   </head>
   <body>
 	<div id="app">
+		<div class="box">
+			<d-row>
+				<d-col>1</d-col>
+				<d-col>2</d-col>
+			</d-row>
+			<d-row>
+				<d-col>1</d-col>
+				<d-col>2</d-col>
+				<d-col>3</d-col>
+			</d-row>
+			<d-row>
+				<d-col>1</d-col>
+				<d-col>2</d-col>
+				<d-col>3</d-col>
+				<d-col>4</d-col>
+			</d-row>
+			<d-row>
+				<d-col span="2">1</d-col>
+				<d-col span="22">11</d-col>
+			</d-row>
+		</div>
 		
 		<div class="box">
 			<d-input value="王" v-model="inputValue"></d-input>
