基本实现row和col的功能

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
   <body>
 	<div id="app">
 		<div class="box">
+			<div style="border: 1px solid black;">
 			<d-row>
 				<d-col>1</d-col>
 				<d-col>2</d-col>
@@ -51,6 +52,15 @@
 				<d-col span="2">1</d-col>
 				<d-col span="22">11</d-col>
 			</d-row>
+			<d-row>
+				<d-col span="2" offset="2">1</d-col>
+				<d-col span="20">10</d-col>
+			</d-row>
+			<d-row gutter="20">
+				<d-col>1</d-col>
+				<d-col>2</d-col>
+			</d-row>
+			</div>
 		</div>
 		
 		<div class="box">
