实现响应式

--- a/public/index.html
+++ b/public/index.html
@@ -33,33 +33,26 @@
 	<div id="app">
 		<div class="box">
 			<div style="border: 1px solid black;">
-			<d-row>
-				<d-col>1</d-col>
-				<d-col>2</d-col>
-			</d-row>
-			<d-row>
-				<d-col>1</d-col>
-				<d-col>2</d-col>
-				<d-col>3</d-col>
-			</d-row>
-			<d-row>
-				<d-col>1</d-col>
-				<d-col>2</d-col>
-				<d-col>3</d-col>
-				<d-col>4</d-col>
-			</d-row>
-			<d-row>
-				<d-col span="2">1</d-col>
-				<d-col span="22">11</d-col>
-			</d-row>
-			<d-row>
-				<d-col span="2" offset="2">1</d-col>
-				<d-col span="20">10</d-col>
-			</d-row>
-			<d-row gutter="20">
-				<d-col>1</d-col>
-				<d-col>2</d-col>
-			</d-row>
+				<d-row gutter="20">
+					<d-col span="2"
+					:phone="{span:24}"
+					:ipad="{span:12}"
+					:narrow-pc="{span:8}"
+					:pc="{span:4}"
+					:wide-pc="{span:2}"
+					>1</d-col>
+					<d-col span="22"
+					:phone="{span:24}"
+					:ipad="{span:12}"
+					:narrow-pc="{span:16}"
+					:pc="{span:20}"
+					:wide-pc="{span:22}"
+					>10</d-col>
+				</d-row>
+				<d-row gutter="20">
+					<d-col>1</d-col>
+					<d-col>2</d-col>
+				</d-row>
 			</div>
 		</div>
 		
