添加col的测试，及修改测试出的bug

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 					>10</d-col>
 				</d-row>
 				<d-row gutter="20">
-					<d-col>1</d-col>
+					<d-col offset="2">1</d-col>
 					<d-col>2</d-col>
 				</d-row>
 			</div>
