--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	</style>
   </head>
   <body>
-	  <style>
+	 <!-- <style>
 	  	.header{
 			background: #333;
 			border: 1px solid #333;
@@ -41,17 +41,17 @@
 		.sider.slide-enter, .sider.slide-leave-to {
 		  margin-right: -230px;
 		}
-	  </style>
+	  </style> -->
 	<div id="app">
-		
-			<d-layout style="height: 100vh;">
+		<button @click="showToast">点我</button>
+			<!-- <d-layout style="height: 100vh;">
 				<d-layout>
 					<d-header>header</d-header>
 					<d-content>content</d-content>
 					<d-footer>footer</d-footer>
 				</d-layout>
 				<d-sider>sider</d-sider>
-			</d-layout>
+			</d-layout> -->
 		
 		
 		<!-- <div class="box">
