--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@
 		}
 	  </style> -->
 	<div id="app">
-		<button @click="showToast">点我</button>
+		<button @click="showToast1">top</button>
+		<button @click="showToast2">middle</button>
+		<button @click="showToast3">bottom</button>
 			<!-- <d-layout style="height: 100vh;">
 				<d-layout>
 					<d-header>header</d-header>
