--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,21 @@
 		<button @click="showToast1">top</button>
 		<button @click="showToast2">middle</button>
 		<button @click="showToast3">bottom</button>
+		<d-tabs :selected.sync="selectedTab">
+			<d-tabs-head>
+				<template slot="actions">
+					<button>设置</button>
+				</template>
+				<d-tabs-item name="woman">美女</d-tabs-item>
+				<d-tabs-item name="finance">财经</d-tabs-item>
+				<d-tabs-item name="sports">体育</d-tabs-item>
+			</d-tabs-head>
+			<d-tabs-body>
+				<d-tabs-pane name="woman">美女相关资讯</d-tabs-pane>
+				<d-tabs-pane name="finance">财经相关资讯</d-tabs-pane>
+				<d-tabs-pane name="sports">体育相关资讯</d-tabs-pane>
+			</d-tabs-body>
+		</d-tabs>
 			<!-- <d-layout style="height: 100vh;">
 				<d-layout>
 					<d-header>header</d-header>
