--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 				<template slot="actions">
 					<button>设置</button>
 				</template>
-				<d-tabs-item name="woman">美女</d-tabs-item>
+				<d-tabs-item name="woman" disabled>美女</d-tabs-item>
 				<d-tabs-item name="finance">财经</d-tabs-item>
 				<d-tabs-item name="sports">体育</d-tabs-item>
 			</d-tabs-head>
