添加 部分测试用例

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 				<d-tabs-pane name="sports">体育相关资讯</d-tabs-pane>
 			</d-tabs-body>
 		</d-tabs>
+		<d-tabs><div></div></d-tabs>
 			<!-- <d-layout style="height: 100vh;">
 				<d-layout>
 					<d-header>header</d-header>
