添加默认样式

--- a/public/index.html
+++ b/public/index.html
@@ -42,20 +42,20 @@
 		  margin-right: -230px;
 		}
 	  </style> -->
-	<div id="app" style="padding-top: 100px; padding-left: 100px; border: 1px solid red;">
+	<div id="app" style="padding: 100px;">
 
-		<div style="border: 1px solid green; padding: 5px; overflow: hidden;" @click="yyy">
+		<div style="padding: 5px; overflow: hidden;">
 			<d-popover>
 				<template slot="content">
 					<div>content内容</div>
 				</template>
-				<button>点我</button>
+				<d-button>点我</d-button>
 			</d-popover>
 			<d-popover>
 				<template slot="content">
 					<div>content内容</div>
 				</template>
-				<button>点我</button>
+				<d-button>点我</d-button>
 			</d-popover>
 		</div>
 		<!-- <button @click="showToast1">top</button>
